--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="content">
         <div class="row">
             <div class="col">
-                <h1>Creeper?</h1>
+                <h1>Creeper</h1>
                 <h3>website about my favorite things.</h3>
             </div>
             <div class="col">
