--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>website about my favorite things.</h3>
             </div>
             <div class="col">
-                <p>This is a column</p>
+                <img src="EFB54F0B-6D67-43AB-899F-832A0007CDF8.png"/>
             </div>
         </div>
         
