--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </body>
 </html>
 .profile-img {
-max-height: 50vh;
-width: auto;
-border-radius: 50%;
+max-height; 50vh;
+width; auto;
+border-radius; 50%;
 }
