--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <!-- main content here -->
+    <div class="banner">
+        <div class="banner-text">Hello,you. Im a Gamer.</div>
+    </div>
     <div class="content">
         <div class="row">
             <div class="col">
