--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="content">
         <div class="row">
             <div class="col">
-                <h1>Creeper</h1>
-                <h3>website about my favorite things.</h3>
+                <h1>Phil</h1>
+                <h3>website about me obviously.</h3>
             </div>
             <div class="col">
                 <img src="EFB54F0B-6D67-43AB-899F-832A0007CDF8.png" class="profile-img" />
@@ -31,7 +31,7 @@
         <div class= "row">
             <div class= "col">
                 <h2> My favorite color</h2>
-                <p>turquoise</p>
+                <p>Green</p>
             </div>
             <div class= "col">
                 <h2> Favorite food</h2>
@@ -39,7 +39,7 @@
             </div>
             <div class= "col">
                 <h2> Favorite Pastime</h2>
-                <p> Videogames</p>
+                <p> Playing Videogames</p>
             </div>
         </div>
             
