--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <!-- main content here -->
     <div class="banner">
-        <div class="banner-text">Hello,you. Im a Gamer.</div>
+        <div class="banner-text">Hi,Welcome to my website.</div>
     </div>
     <div class="content">
         <div class="row">
             <div class="col">
                 <h1>Phil</h1>
-                <h3>website about me obviously.</h3>
+                <h3>website about me.</h3>
             </div>
             <div class="col">
                 <img src="EFB54F0B-6D67-43AB-899F-832A0007CDF8.png" class="profile-img" />
@@ -42,6 +42,11 @@
                 <p> Playing Videogames</p>
             </div>
         </div>
+        
+        <div class="row" style="margin: 2rem 0;">
+            <div class="col" style="width: 66.66%;">
+                <iframe width="100%" height="500" src="https://www.youtube.com/watch?v=cPJUBQd-PNM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             
         <div class="footer">
             <!-- footer content here -->
