--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
             <div class="col" style="width: 66.66%;">
                 <iframe width="100%" height="500" src="https://www.youtube.com/watch?v=cPJUBQd-PNM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <div class="col" style="padding: 2rem;">
+                <h2>oh!hey didn't see you there</h2>
+                <p>I love memes and I love to kazoooooo!!</p>
+                <div class="row">
+                    <div class="col">
+                        <img src="https://media.giphy.com/media/SRRQQmNtKf8IM/giphy.gif" />
+                    </div>
+                    <div class="col">
+                        <img src="https://media.giphy.com/media/yr7n0u3qzO9nG/giphy.gif" />
+                    </div>
+                </div>
+            </div>
+        </div>
             
         <div class="footer">
             <!-- footer content here -->
