--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
         <div class="row" style="margin: 2rem 0;">
             <div class="col" style="width: 66.66%;">
-                <iframe width="100%" height="500" src="https://www.youtube.com/watch?v=cPJUBQd-PNM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="500" src="https://www.youtube.com/watch?v=7qk7d7MPFYE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="col" style="padding: 2rem;">
                 <h2>oh!hey didn't see you there</h2>
